--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -174,6 +174,9 @@ if(NOT DEFINED SNMALLOC_ONLY_HEADER_LIBRARY)
         if (${TEST_CATEGORY} MATCHES "perf")
           set_tests_properties(${TESTNAME} PROPERTIES PROCESSORS 4)
         endif()
+        if (${TEST_CATEGORY} MATCHES "func")
+          target_compile_definitions(${TESTNAME} PRIVATE -DUSE_SNMALLOC_STATS)
+        endif ()
       endforeach()
     endforeach()
   endforeach()
