Reduce parallism in tests
If some tests on Windows are co-scheduled, then they run out of commit
space and crash. For example, in func-memory,
test_external_pointer_large can cause the small CI machines to run out
of commit space on Windows.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -177,7 +177,24 @@ if(NOT DEFINED SNMALLOC_ONLY_HEADER_LIBRARY)
           add_test(${TESTNAME} ${TESTNAME})
         endif()
         if (${TEST_CATEGORY} MATCHES "perf")
+          message(STATUS "Single threaded test: ${TESTNAME}")
           set_tests_properties(${TESTNAME} PROPERTIES PROCESSORS 4)
+        endif()
+        if(MSVC)
+          # On Windows these tests use a lot of memory as it doesn't support
+          # lazy commit.
+          if (${TEST} MATCHES "two_alloc_types")
+            message(STATUS "Single threaded test: ${TESTNAME}")
+            set_tests_properties(${TESTNAME} PROPERTIES PROCESSORS 4)
+          endif()
+          if (${TEST} MATCHES "fixed_region")
+            message(STATUS "Single threaded test: ${TESTNAME}")
+            set_tests_properties(${TESTNAME} PROPERTIES PROCESSORS 4)
+          endif()
+          if (${TEST} MATCHES "memory")
+            message(STATUS "Single threaded test: ${TESTNAME}")
+            set_tests_properties(${TESTNAME} PROPERTIES PROCESSORS 4)
+          endif()
         endif()
         if (${TEST_CATEGORY} MATCHES "func")
           target_compile_definitions(${TESTNAME} PRIVATE -DUSE_SNMALLOC_STATS)
