Make CI show clangformat failures.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -203,6 +203,7 @@ jobs:
 
   - script: |
       make clangformat
+      git diff
       if [ "$(git diff $(Build.SourceVersion))" != "" ]; then exit 1; fi
 
     workingDirectory: build
