--- a/snmalloc-sys/Cargo.toml
+++ b/snmalloc-sys/Cargo.toml
@@ -3,6 +3,10 @@ name = "snmalloc-sys"
 version = "0.1.0"
 authors = ["schrodingerzhu <i@zhuyi.fan>"]
 edition = "2018"
+license = "MIT"
+description = "rust raw bindings of snmalloc."
+homepage = "https://github.com/microsoft/snmalloc"
+repository = "https://github.com/SchrodingerZhu/snmalloc-rs"
 build = "build.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -10,7 +14,7 @@ build = "build.rs"
 cmake = "0.1"
 
 [dependencies.libc]
-version = "*"
+version = "0.2"
 default-features = false
 
 [features]
