adjust CMakeLists.txt, may broke CI tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,22 +142,30 @@ if(NOT DEFINED SNMALLOC_ONLY_HEADER_LIBRARY)
     set(${result} ${dirlist})
   endmacro()
 
-  macro(add_shim name)
-    if(SNMALLOC_RUST_SUPPORT)
-      add_library(${name} STATIC src/override/rust.cc)
-    else()
-      add_library(${name} SHARED src/override/malloc.cc src/override/new.cc)
-    endif()
+  macro(add_shim name type)
+    add_library(${name} ${type} ${ARGN})
     target_link_libraries(${name} snmalloc_lib)
-    target_compile_definitions(${name} PRIVATE "SNMALLOC_EXPORT=__attribute__((visibility(\"default\")))")
+    if(MSVC)
+      target_compile_definitions(${name} PRIVATE "SNMALLOC_EXPORT=__declspec(dllexport)")
+    else()
+      target_compile_definitions(${name} PRIVATE "SNMALLOC_EXPORT=__attribute__((visibility(\"default\")))")
+    endif()
     set_target_properties(${name} PROPERTIES CXX_VISIBILITY_PRESET hidden)
 
     if(EXPOSE_EXTERNAL_PAGEMAP)
-      target_compile_definitions(${name} PRIVATE -DSNMALLOC_EXPOSE_PAGEMAP)
+      if(MSVC)
+        target_compile_definitions(${name} PRIVATE /DSNMALLOC_EXPOSE_PAGEMAP)
+      else()
+        target_compile_definitions(${name} PRIVATE -DSNMALLOC_EXPOSE_PAGEMAP)
+      endif()
     endif()
 
     if(EXPOSE_EXTERNAL_RESERVE)
-      target_compile_definitions(${name} PRIVATE -DSNMALLOC_EXPOSE_RESERVE)
+      if(MSVC)
+        target_compile_definitions(${name} PRIVATE /DSNMALLOC_EXPOSE_RESERVE)
+      else()
+        target_compile_definitions(${name} PRIVATE -DSNMALLOC_EXPOSE_RESERVE)
+      endif()
     endif()
 
     # Ensure that we do not link against C++ stdlib when compiling shims.
@@ -166,10 +174,16 @@ if(NOT DEFINED SNMALLOC_ONLY_HEADER_LIBRARY)
   endmacro()
 
   if(NOT MSVC)
-    add_shim(snmallocshim)
-
-    add_shim(snmallocshim-1mib)
+    set(SHARED_FILES src/override/new.cc src/override/malloc.cc)
+    add_shim(snmallocshim SHARED ${SHARED_FILES})
+    add_shim(snmallocshim-1mib SHARED ${SHARED_FILES})
     target_compile_definitions(snmallocshim-1mib PRIVATE IS_ADDRESS_SPACE_CONSTRAINED)
+  endif()
+
+  if(SNMALLOC_RUST_SUPPORT)
+    add_shim(snmallocshim-rust STATIC src/override/rust.cc)
+    add_shim(snmallocshim-1mib-rust STATIC src/override/rust.cc)
+    target_compile_definitions(snmallocshim-1mib-rust PRIVATE IS_ADDRESS_SPACE_CONSTRAINED)
   endif()
 
   enable_testing()
