remove extra declarations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,9 +145,7 @@ if(NOT DEFINED SNMALLOC_ONLY_HEADER_LIBRARY)
   macro(add_shim name type)
     add_library(${name} ${type} ${ARGN})
     target_link_libraries(${name} snmalloc_lib)
-    if(MSVC)
-      target_compile_definitions(${name} PRIVATE "SNMALLOC_EXPORT=__declspec(dllexport)")
-    else()
+    if(NOT MSVC)
       target_compile_definitions(${name} PRIVATE "SNMALLOC_EXPORT=__attribute__((visibility(\"default\")))")
     endif()
     set_target_properties(${name} PROPERTIES CXX_VISIBILITY_PRESET hidden)
