Update to version 0.2.0 - Use the master branch of microsoft/snmalloc - Fix Documentation

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "snmalloc-sys/snmalloc"]
 	path = snmalloc-sys/snmalloc
-	url = https://github.com/SchrodingerZhu/snmalloc
+	url = https://github.com/microsoft/snmalloc
 	branch = master
