--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -246,7 +246,7 @@ jobs:
       set -eo pipefail
       make clangformat
       git diff
-      if [ "$(git diff $(Build.SourceVersion))" != "" ]; then exit 1; fi
+      git diff --exit-code $(Build.SourceVersion)
 
     workingDirectory: build
     failOnStderr: true
