update version and sync snmalloc

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "snmalloc-sys/snmalloc"]
+[submodule "new"]
 	path = snmalloc-sys/snmalloc
 	url = https://github.com/microsoft/snmalloc
 	branch = master
