--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -232,7 +232,7 @@ jobs:
       wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
       sudo apt-add-repository "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-9 main"
       sudo apt-get update
-      sudo apt-get install -y clang-format-9
+      sudo apt-get install -y clang-format-9 clang-tidy-9
       sudo update-alternatives --install /usr/bin/clang-format clang-format /usr/bin/clang-format-9 100
 
     displayName: 'Install clang'
