fix mingw partly (#23)
* fix mingw x1

* try msys2

* workaround mingw64

* fix doc

* adjust linking order

* fix CI config

* remove stable

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 matrix:
-  env: ALLOW_FAILURES=0
   include:
+    - os: windows
+      language: rust
+      rust:
+        - nightly
+      env:
+        - MINGW64_BIN=C:\\tools\\msys64\\mingw64\\bin
+
     - os: windows
       language: rust
       rust:
@@ -16,19 +22,7 @@ matrix:
       before_script:
         - rustup toolchain install nightly-x86_64-pc-windows-msvc
         - rustup default nightly-msvc
-    
-    - os: windows
-      language: rust
-      rust:
-        - stable
-      env: ALLOW_FAILURES=1
 
-    - os: windows
-      language: rust
-      rust:
-        - nightly
-      env: ALLOW_FAILURES=1
-        
     - os: linux
       language: rust
       rust:
@@ -67,11 +61,42 @@ matrix:
       rust:
         - nightly
         
-  allow_failures:     
-    - env: ALLOW_FAILURES=1
 
 
+before_install:
+- |-
+    case $TRAVIS_OS_NAME in
+      windows)
+        [[ ! -f C:/tools/msys64/msys2_shell.cmd ]] && rm -rf C:/tools/msys64
+        choco uninstall -y mingw
+        choco upgrade --no-progress -y msys2
+        export msys2='cmd //C RefreshEnv.cmd '
+        export msys2+='& set MSYS=winsymlinks:nativestrict '
+        export msys2+='& C:\\tools\\msys64\\msys2_shell.cmd -defterm -no-start'
+        export mingw64="$msys2 -mingw64 -full-path -here -c "\"\$@"\" --"
+        export msys2+=" -msys2 -c "\"\$@"\" --"
+        $msys2 pacman --sync --noconfirm --needed mingw-w64-x86_64-toolchain
+        ## Install more MSYS2 packages from https://packages.msys2.org/base here
+        taskkill //IM gpg-agent.exe //F  # https://travis-ci.community/t/4967
+        export PATH=/C/tools/msys64/mingw64/bin:$PATH
+        export MAKE=mingw32-make  # so that Autotools can find it
+        ;;
+    esac
 
+before_cache:
+- |-
+    case $TRAVIS_OS_NAME in
+      windows)
+        # https://unix.stackexchange.com/a/137322/107554
+        $msys2 pacman --sync --clean --noconfirm
+        ;;
+    esac
+
+cache:
+    directories:
+    - $HOME/AppData/Local/Temp/chocolatey
+    - /C/tools/msys64
+    
 script:
   - cargo test --all
   - cargo test --all --features 1mib
