--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,8 +94,14 @@ if (WIN32)
 endif()
 
 if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-  if (NOT ${CMAKE_SYSTEM_PROCESSOR} MATCHES "arm")
+  if(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64")
     target_compile_options(snmalloc_lib INTERFACE -mcx16)
+  elseif(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "amd64")
+   target_compile_options(snmalloc_lib INTERFACE -mcx16)
+  elseif(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "AMD64")
+   target_compile_options(snmalloc_lib INTERFACE -mcx16)
+  elseif(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86")
+   target_compile_options(snmalloc_lib INTERFACE -mcx16)
   endif()
 endif ()
 
