--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,6 +9,8 @@ jobs:
   displayName: Linux
   pool:
     vmImage: 'ubuntu-16.04'
+  container: snmallocciteam/build_linux_x64:latest
+
   strategy:
     matrix:
       Clang-6 Debug:
@@ -55,11 +57,6 @@ jobs:
 
   steps:
   - script: |
-      sudo add-apt-repository ppa:ubuntu-toolchain-r/test
-      sudo apt-get update
-      sudo apt-get install -y ninja-build libc++-dev libc++abi-dev libc++abi1 libstdc++-7-dev gcc-8 g++-8
-      # sudo apt-get install clang-6.0 clang++-6.0
-
       sudo update-alternatives --install /usr/bin/cc cc /usr/bin/$(CC) 100
       sudo update-alternatives --set cc /usr/bin/$(CC)
 
